ngo-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngo-service
  labels:
    app: ngo-service
spec:
  type: ClusterIP
  selector:
    app: ngo-service
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
