ngo-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngo-service
  namespace: solidarytech
  labels:
    app: ngo-service
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ngos
            pathType: Prefix
            backend:
              service:
                name: ngo-service
                port:
                  number: 8081
